# ScholarSynth

./: .env-sample  .gitignore  README.md  ScholarSynth.md  app.py  overview.md  pyproject.toml  requirements.txt
retrieval/: document_loader.py  embedding_config.py  parent_document_retriever.py  prompt_template.py  text_splitter.py  vector_store.py
scripts/: ingest.py
utils/: __init__.py  config_loader.py  error_handling.py  logging_config.py
