[project]
name = "scholarsynth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.1.3",
    "chromadb>=0.6.3",
    "langchain>=0.3.23",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.12",
    "openai>=1.70.0",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.44.1",
    "tiktoken>=0.9.0",
]
authors = [
    { name = "Mathews Tom", email = "tom.mathews@nyu.edu" },
]
